# dotfiles

./: README.md  bin_new-project  dot_gitconfig  dot_zprofile  dot_zshrc  run_once_setup-mcp-symlinks.sh
Dev/QoE_App/dot_claude/: settings.local.json
Dev/QoE_App/dot_claude/commands/: analyze  migrate  refactor  scaffold  test  work
dot_config/: starship.toml
dot_config/ghostty/: private_config
dot_config/mise/: config.toml
dot_config/ruff/: pyproject.toml.template
templates/python-backend/: cookiecutter.json
templates/python-backend/{{cookiecutter.project_slug}}/: .env.example  .gitignore  .mise.toml  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  pyproject.toml
templates/python-backend/{{cookiecutter.project_slug}}/.claude/commands/: analyze  feature  test
templates/python-backend/{{cookiecutter.project_slug}}/.github/workflows/: ci.yml
templates/python-backend/{{cookiecutter.project_slug}}/src/: __init__.py  main.py
templates/python-backend/{{cookiecutter.project_slug}}/src/features/: __init__.py
templates/python-backend/{{cookiecutter.project_slug}}/src/features/example_todo/: __init__.py  models.py  repository.py  routes.py  schemas.py  service.py
templates/python-backend/{{cookiecutter.project_slug}}/src/features/health/: __init__.py  routes.py
templates/python-backend/{{cookiecutter.project_slug}}/src/shared/: __init__.py  config.py  database.py  graphql.py  middleware.py
templates/python-backend/{{cookiecutter.project_slug}}/tests/: conftest.py
templates/python-backend/{{cookiecutter.project_slug}}/tests/unit/: test_health.py
templates/python-react-app/: cookiecutter.json
templates/python-react-app/{{cookiecutter.project_slug}}/: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md
templates/python-react-app/{{cookiecutter.project_slug}}/.claude/agents/: python-engineer.md  python-reviewer.md  typescript-engineer.md  typescript-reviewer.md
templates/python-react-app/{{cookiecutter.project_slug}}/.github/workflows/: ci.yml
templates/python-react-app/{{cookiecutter.project_slug}}/backend/: pyproject.toml  requirements.txt
templates/python-react-app/{{cookiecutter.project_slug}}/backend/app/: main.py  models.py
templates/python-react-app/{{cookiecutter.project_slug}}/backend/scripts/: dump_openapi.py
templates/python-react-app/{{cookiecutter.project_slug}}/backend/tests/: test_main.py
templates/python-react-app/{{cookiecutter.project_slug}}/frontend/: eslint.config.mjs  package.json  tsconfig.json  vite.config.ts
templates/python-react-app/{{cookiecutter.project_slug}}/frontend/src/: App.tsx  main.tsx
templates/python-react-app/{{cookiecutter.project_slug}}/frontend/src/lib/: api.test.ts  api.ts
templates/python-react-app/{{cookiecutter.project_slug}}/frontend/src/types/: api.generated.ts
